frontend/packages/db-structure/src/parser/schemarb/parser.js
// @ts-nocheck
// @generated by Peggy 4.1.1.
//
// https://peggyjs.org/

import pluralize from "pluralize-esm";
import { isEqual } from "lodash-es";
import { sortBy } from "lodash-es";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { schema: peg$parseschema };
  var peg$startRuleFunction = peg$parseschema;

  var peg$c0 = ",";
  var peg$c1 = ":";
  var peg$c2 = "on_delete";
  var peg$c3 = "on_update";
  var peg$c4 = "add_index";
  var peg$c5 = "ActiveRecord::Schema.define";
  var peg$c6 = "create_table";
  var peg$c7 = ".index";
  var peg$c8 = "default:";
  var peg$c9 = "null:";
  var peg$c10 = ".references";
  var peg$c11 = "add_foreign_key";
  var peg$c12 = "column";
  var peg$c13 = "primary_key";
  var peg$c14 = "version";
  var peg$c15 = "do";
  var peg$c16 = "end";
  var peg$c17 = "->";
  var peg$c18 = ".";
  var peg$c19 = "true";
  var peg$c20 = "false";
  var peg$c21 = "#";
  var peg$c22 = "'";
  var peg$c23 = "\"";
  var peg$c24 = "|";
  var peg$c25 = "//";
  var peg$c26 = "\r\n";
  var peg$c27 = "\n";
  var peg$c28 = " ";

  var peg$r0 = /^[^"\n]/;
  var peg$r1 = /^[^'\n]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[a-z0-9_.]/i;
  var peg$r4 = /^[^\t\r\n]/;
  var peg$r5 = /^[^\n]/;
  var peg$r6 = /^[ \t\r\n\r]/;

  var peg$e0 = peg$literalExpectation(",", false);
  var peg$e1 = peg$literalExpectation(":", false);
  var peg$e2 = peg$literalExpectation("on_delete", true);
  var peg$e3 = peg$literalExpectation("on_update", true);
  var peg$e4 = peg$otherExpectation("add index");
  var peg$e5 = peg$literalExpectation("add_index", false);
  var peg$e6 = peg$otherExpectation("schema define");
  var peg$e7 = peg$literalExpectation("ActiveRecord::Schema.define", false);
  var peg$e8 = peg$otherExpectation("create table");
  var peg$e9 = peg$literalExpectation("create_table", true);
  var peg$e10 = peg$otherExpectation("do |t|");
  var peg$e11 = peg$otherExpectation("index");
  var peg$e12 = peg$literalExpectation(".index", false);
  var peg$e13 = peg$otherExpectation("default");
  var peg$e14 = peg$literalExpectation("default:", false);
  var peg$e15 = peg$otherExpectation("null");
  var peg$e16 = peg$literalExpectation("null:", false);
  var peg$e17 = peg$otherExpectation("references");
  var peg$e18 = peg$literalExpectation(".references", false);
  var peg$e19 = peg$otherExpectation("add foreign key");
  var peg$e20 = peg$literalExpectation("add_foreign_key", true);
  var peg$e21 = peg$otherExpectation("column");
  var peg$e22 = peg$literalExpectation("column", false);
  var peg$e23 = peg$otherExpectation("primary key");
  var peg$e24 = peg$literalExpectation("primary_key", false);
  var peg$e25 = peg$literalExpectation("version", false);
  var peg$e26 = peg$literalExpectation("do", false);
  var peg$e27 = peg$literalExpectation("end", false);
  var peg$e28 = peg$otherExpectation("lambda function");
  var peg$e29 = peg$literalExpectation("->", false);
  var peg$e30 = peg$classExpectation(["\"", "\n"], true, false);
  var peg$e31 = peg$classExpectation(["'", "\n"], true, false);
  var peg$e32 = peg$literalExpectation(".", false);
  var peg$e33 = peg$anyExpectation();
  var peg$e34 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e35 = peg$literalExpectation("true", false);
  var peg$e36 = peg$literalExpectation("false", false);
  var peg$e37 = peg$otherExpectation("letter, number or underscore");
  var peg$e38 = peg$classExpectation([["a", "z"], ["0", "9"], "_", "."], false, true);
  var peg$e39 = peg$otherExpectation("comment line");
  var peg$e40 = peg$literalExpectation("#", false);
  var peg$e41 = peg$otherExpectation("whatever");
  var peg$e42 = peg$classExpectation(["\t", "\r", "\n"], true, false);
  var peg$e43 = peg$literalExpectation("'", false);
  var peg$e44 = peg$literalExpectation("\"", false);
  var peg$e45 = peg$literalExpectation("|", false);
  var peg$e46 = peg$otherExpectation("comment");
  var peg$e47 = peg$literalExpectation("//", false);
  var peg$e48 = peg$classExpectation(["\n"], true, false);
  var peg$e49 = peg$otherExpectation("newline");
  var peg$e50 = peg$literalExpectation("\r\n", false);
  var peg$e51 = peg$literalExpectation("\n", false);
  var peg$e52 = peg$otherExpectation("whitespace");
  var peg$e53 = peg$classExpectation([" ", "\t", "\r", "\n", "\r"], false, false);
  var peg$e54 = peg$literalExpectation(" ", false);

  var peg$f0 = function() {
  return implicityRef(data)
};
  var peg$f1 = function(tableData) {
  const { table, refs } = tableData;
  pushTable(table);
  pushRefs(refs)
};
  var peg$f2 = function(r) {
    pushRef(r);
  };
  var peg$f3 = function(fromTable, toTable, props) {
    const foreign = refactorForeign(createForeign(fromTable, toTable, props));
    return foreign;
  };
  var peg$f4 = function(columnName) { return ({ columnName }) };
  var peg$f5 = function(primaryKey) { return ({ primaryKey }) };
  var peg$f6 = function(r, value) {
  switch (r.toLowerCase()) {
    case 'on_delete':
      return {
        onDelete: value.split('_').join(' ')
      }
    case 'on_update':
      return {
        onUpdate: value.split('_').join(' ')
      }
  }
 };
  var peg$f7 = function(name, body) {
    const table = ({
      name,
      fields: addPrimaryKey(body.fields),
      // index: _.union(...body.index)
    })
    return {
      table,
      refs: createRefFromTableWithReference(table, body.references)
    };
  };
  var peg$f8 = function(fields) {
    return ({
      fields: fields.filter(field => field.isField).map(field => field.field),
      index: fields.filter(field => field.isIndex).map(field => field.index),
      references: fields.filter(field => field.isReferences).map(field => field.reference),
    });
  };
  var peg$f9 = function(field) { return field };
  var peg$f10 = function(reference) { return ({ reference, isReferences: true })};
  var peg$f11 = function(field) { return ({ field, isField: true }) };
  var peg$f12 = function(reference) {
    return reference;
  };
  var peg$f13 = function(type, name, props) {
    const defaultProp = props.find(p => p.isDefault);
    const nullableProp = props.find(p => p.isNull);

    return ({
      name: name,
      type: {type_name: type},
      default: defaultProp ? defaultProp.value : null,
      nullable: nullableProp ? nullableProp.value : null,
    })
  };
  var peg$f14 = function(value) { return { isDefault: true, value } };
  var peg$f15 = function(value) { return { isNull: true, value } };
  var peg$f16 = function(reference) { return reference };
  var peg$f17 = function(reference) { return reference };
  var peg$f18 = function(c) { return c.join("") };
  var peg$f19 = function(c) { return c.join("") };
  var peg$f20 = function(c) { return c.join("") };
  var peg$f21 = function(c) { return c.join("") };
  var peg$f22 = function(c) { return c.join("") };
  var peg$f23 = function() {return text()};
  var peg$f24 = function(n) { return parseInt(n.join(""), 10); };
  var peg$f25 = function() { return true };
  var peg$f26 = function() { return false };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseschema() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseline_rule();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseline_rule();
    }
    peg$savedPos = s0;
    s1 = peg$f0();
    s0 = s1;

    return s0;
  }

  function peg$parseline_rule() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewhitespace();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewhitespace();
    }
    s2 = peg$parserule();
    if (s2 !== peg$FAILED) {
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsecomment_line();
      if (s0 === peg$FAILED) {
        s0 = peg$parseend_line();
        if (s0 === peg$FAILED) {
          s0 = peg$parse__();
        }
      }
    }

    return s0;
  }

  function peg$parserule() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsecreate_table_syntax();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseadd_foreign_key_syntax();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$parseother_class_prop();
      }
    }

    return s0;
  }

  function peg$parseadd_foreign_key_syntax() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsesp();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsesp();
    }
    s2 = peg$parseadd_foreign_key();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parsesp();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parsesp();
      }
      s4 = peg$parsename();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsesp();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsesp();
          }
          s7 = peg$parsename();
          if (s7 !== peg$FAILED) {
            s8 = [];
            s9 = peg$parseadd_foreign_key_props_syntax();
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$parseadd_foreign_key_props_syntax();
            }
            peg$savedPos = s0;
            s0 = peg$f3(s4, s7, s8);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseadd_foreign_key_props_syntax() {
    var s0, s1, s2, s3, s4, s5, s6;
